# sutra

./: .cursorignore  .gitignore  Cargo.toml  README.md  debug_inc.sutra  debug_test.sutra  devlog.md  macros.sutra  prompt-preprocessing-protocol.md  repomix-output.xml  rustfmt.toml  system-reference.md  test.sutra  test_more_atoms.sutra
.cargo/: config.toml
.cursor/rules/: B-iteration-self-critique.mdc  a1-analysis-full.mdc  clear-recipe-code-style.mdc  clear-simple-rust.mdc  concise-import-aliases.mdc  d0-concise-docs.mdc  d1-clear-docs.mdc  h1-holistic-perspective-when-stuck.mdc  holistic-perspective-when-stuck.mdc  iteration-self-critique.mdc  (+5 more)
docs/: 01_SUTRA_ENGINE_PHILOSOPHY_AND_DESIGN_PRINCIPLES.md  02_SUTRA_CORE_ARCHITECTURE_AND_ATOM_SET.md  03_SUTRA_AUTHORING_PATTERNS_AND_PRAGMATIC_GUIDELINES.md  A_LANGUAGE_SPEC.md  B_STORYLET_SPEC.md  C_THREAD_SPEC.md  RUST_YOUR_OWN_LISP_REFERENCE.md  SHORT_NARRATIVE_DESIGN_REFERENCE.md  canonical-language-reference.md  canonical-testing-reference.md  i. implementation_outline.md  i_implementation_outline.md  ii. implementation_file_plan.md  ii_implementation_file_plan.md  iii. implementation_per_file_plan.md  iii_implementation_per_file_plan.md  philosophy.md  world-state-refactor.md
memory-bank/: README.md  activeContext.md  changelog.md  meta-instructions.md  productContext.md  progress.md  projectPatterns.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: check_grammar.sh  install_hooks.sh
src/: ast.rs  ast_builder.rs  atom.rs  atoms.rs  atoms_std.rs  cli.rs  cst_parser.rs  diagnostics.rs  discovery.rs  engine.rs  error.rs  error_messages.rs  errors.rs  eval.rs  lib.rs  macro.rs  macroexpander.rs  macros.rs  macros_std.rs  main.rs  parser.rs  path.rs  registry.rs  repl.rs  runtime.rs  semantic_validation.rs  sutra.pest  syntax.rs  test.rs  test_harness.rs  test_runner.rs  test_utils.rs  validate.rs  validation.rs  validation_simplified.rs  validator.rs  value.rs  world.rs
tests/: README.md  cli_regression.rs  core_eval_tests.rs  diagnostic_tests.rs  error_code_examples.yaml  eval_tests.rs  harness.rs  harness_bin.rs  integration_pipeline.rs  integration_tests.rs  macro_expansion_tests.rs  parser_tests.rs  registry_tests.rs  script_runner.rs  test_discovery.rs  test_execution.rs  test_reporting.rs  unit_tests.rs  validator_tests.rs
(+243 files in other folders)
