[package]
name = "sutra"
version = "0.1.0"
edition = "2021"

[dependencies]
im = "15.1.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
pest = "2.7.10"
pest_derive = "2.7.10"
clap = { version = "4.5.4", features = ["derive"] }
termcolor = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
difference = "2.0.0"
walkdir = "2.5.0"
