[package]
name = "sutra"
version = "0.1.0"
edition = "2021"

[dependencies]
im = { version = "15.1.0", features = ["serde"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
pest = "2.7.10"
pest_derive = "2.7.10"
clap = { version = "4.5.4", features = ["derive"] }
termcolor = "1.4.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
difference = "2.0.0"
walkdir = "2"
sha2 = "0.10"
once_cell = "1.18"
serde_yaml = "0.9"
atty = "0.2.14"
unicode-segmentation = "1.10.0"
ariadne = { version = "0.4.0", features = ["auto-color"] }
chumsky = "1.0.0-alpha.7"

[features]
default = []
test-atom = []

[[bin]]
name = "harness"
path = "tests/harness_bin.rs"
