[package]
name = "sutra"
version = "0.1.0"
edition = "2021"
description = "Sutra: a modular, embeddable, and extensible language engine for interactive fiction and narrative design."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sirel/sutra"
keywords = ["language", "interpreter", "interactive-fiction", "narrative", "engine"]
categories = ["game-engines", "parsing", "text-processing"]

[dependencies]
im = { version = "15.1.0", features = ["serde"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
pest = "2.7.10"
pest_derive = "2.7.10"
clap = { version = "4.5.4", features = ["derive"] }
termcolor = "1.4.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0.69"
miette = { version = "7.2.0", features = ["fancy"] }
difference = "2.0.0"
walkdir = "2"
sha2 = "0.10"
once_cell = "1.18"
serde_yaml = "0.9"
atty = "0.2.14"
unicode-segmentation = "1.10.0"
chumsky = "1.0.0-alpha.7"
regex = "1.11.1"
lazy_static = "1.4"
regex-automata = "0.4.9"
regex-syntax = "0.8.5"
unicode-width = "0.2.1"

[features]
default = []
test-atom = []

[dev-dependencies]
miette = "7.2.0"
assert_cmd = "2.0"
predicates = "3.0"
